@@ -169,7 +169,7 @@ See https://maven.apache.org/plugins/maven-jar-plugin/examples/create-test-jar.h
           <reuseForks>true</reuseForks>
 	  <printSummary>false</printSummary>
           <disableXmlReport>false</disableXmlReport>
-          <argLine>-server -ea -Xms512m -Xmx8g -XX:+UseMembar -XX:MaxPermSize=500m -Djavadoc=true -Djava.net.preferIPv4Stack=${java.net.preferIPv4Stack} -Dlog4j.configuration=file:bigdata/src/resources/logging/log4j.properties</argLine>
+          <argLine>-server -ea -Xms512m -Xmx4g -Dlog4j.configuration=file:bigdata/src/resources/logging/log4j.properties</argLine>
 	   <rerunFailingTestsCount>2</rerunFailingTestsCount>
         </configuration>
       </plugin>
